@@ -5,7 +5,8 @@ import com.linkedin.common.GlobalTags;
 import com.linkedin.common.TagAssociationArray;
 import com.linkedin.data.template.RecordTemplate;
 import com.linkedin.metadata.aspect.patch.template.ArrayMergingTemplate;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 import javax.annotation.Nonnull;
 
 public class GlobalTagsTemplate implements ArrayMergingTemplate<GlobalTags> {
@@ -40,13 +41,18 @@ public class GlobalTagsTemplate implements ArrayMergingTemplate<GlobalTags> {
   @Nonnull
   @Override
   public JsonNode transformFields(JsonNode baseNode) {
-    return arrayFieldToMap(baseNode, TAGS_FIELD_NAME, List.of(TAG_FIELD_NAME, ATTRIBUTION_SOURCE));
+    return arrayFieldToMap(
+        baseNode,
+        TAGS_FIELD_NAME,
+        Collections.unmodifiableList(Arrays.asList(TAG_FIELD_NAME, ATTRIBUTION_SOURCE)));
   }
 
   @Nonnull
   @Override
   public JsonNode rebaseFields(JsonNode patched) {
     return transformedMapToArray(
-        patched, TAGS_FIELD_NAME, List.of(TAG_FIELD_NAME, ATTRIBUTION_SOURCE));
+        patched,
+        TAGS_FIELD_NAME,
+        Collections.unmodifiableList(Arrays.asList(TAG_FIELD_NAME, ATTRIBUTION_SOURCE)));
   }
 }
